# oort

./: .gitignore  CLAUDE.md  OllamaDockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  preload-models.sh  start-ollama.sh  turbo.json
app/: layout.tsx  page.tsx
apps/frontend/: CLAUDE.md  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.mjs  vite.config.mts  vitest.config.ts
apps/frontend/e2e/: BROWSER_TESTS.md
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/assets/textures/: index.ts
apps/frontend/src/cloud/: Planet.tsx  Render.tsx  Scene.tsx  render.tsx  utils.js
apps/frontend/src/cloud/background/: StarField.tsx
apps/frontend/src/cloud/camera/: CameraController.tsx
apps/frontend/src/cloud/effects/: NebulaClouds.tsx  PostProcessing.tsx  ShootingStarsRain.tsx
apps/frontend/src/cloud/hooks/: useCameraAnimation.ts  useColorCorrectedMaterial.ts  useLookAway.ts  useSceneScale.ts
apps/frontend/src/cloud/lighting/: AmbientLighting.tsx  ClusterLights.tsx
apps/frontend/src/cloud/planet/: Planet.tsx  PlanetAtmosphere.tsx  PlanetLabel.tsx  PlanetMesh.tsx  PlanetRings.tsx  PlanetSparkles.tsx  SelectionRing.tsx
apps/frontend/src/cloud/shaders/: AtmosphereShader.ts  ColorCorrectionShader.ts  NebulaShader.ts
apps/frontend/src/cloud/spaceship/: Spaceship.tsx  SpaceshipController.tsx  useSpaceshipControls.ts
apps/frontend/src/components/ui/: command.tsx
apps/frontend/src/hooks/: useFileUpload.ts  useNavigation.ts  useScenePersistence.ts  useUrlUpload.ts
apps/frontend/src/layout/: ConceptPanel.tsx  EmptyStateModal.tsx  FloatingPlanetPanel.tsx  HUD.tsx  Layout.tsx  Menu.test.tsx  Menu.tsx  Minimap.tsx
apps/frontend/src/mocks/: simulation.json
apps/frontend/src/test/: setup.ts  test-utils.tsx
apps/microservice1/: package.json
apps/microservice1/src/: index.ts
apps/microservice2/: package.json
apps/microservice2/src/: index.ts
db/: Dockerfile  data.cql
ml/: CLAUDE.md  Cargo.toml  Dockerfile  preload_models.sh  pyproject.toml  requirements.txt  setup_project.sh
ml/src/: dimensionality.py  dimensionality.rs  error.rs  main.py  main.rs  preprocessing.py
ml/src/concepts/: model.py  model.rs
ml/src/controllers/: mod.rs  text_processing.rs
ml/src/data/: client.rs  mod.rs  scraper.rs
ml/src/data/cdn/: github.rs  mod.rs
ml/src/embeddings/: TextEmbedder.py  extract.py  model.py  model.rs
ml/src/mocks/: clusteredConcepts.json  firstTale.txt
ml/src/models/: mod.rs
ml/src/models/concepts/: mod.rs  model.rs  nlp.rs  truncation.rs  validation.rs
ml/src/models/embeddings/: mod.rs  model.rs
ml/src/models/inference/: config.rs  embedding.rs  llm.rs  mod.rs  traits.rs
ml/tests/: endpoint.test.py
notebooks/: CLAUDE.md
notebooks/fine-tuning/: pyproject.toml
