[package]
name = "oort-ml-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12.15", features = ["json"] }
ndarray = ">= 0.13, < 0.16"
ndarray-linalg = { version = ">= 0.13, <= 0.16", features = ["openblas-system"] }
ndarray-stats = "0.6"
rand = "0.9.1"
env_logger = "0.11.8"
log = "0.4"
futures = "0.3"
bytes = "1.5"
regex = "1.9"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-reduction = "0.7.1"
tokenizers = "0.21.2"
rust-stemmers = "1.2"
cdrs-tokio = "8"
uuid = { version = "1.17", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keyword_extraction = { version = "1.5", features = ["rake", "tf_idf"] }
stop-words = "0.9"

[features]
default = []
full-nlp = []
