[tool.poetry]
name = "oort-core"
version = "0.1.0"
description = "Embedding generation and other ML capabilities for Oort app"
authors = ["nicolas-ricc <nicolas.riccomini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.47.1"
torch = "^2.5.1"
scikit-learn = "^1.6.0"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
