[tool.poetry]
name = "oort-core"
version = "0.1.0"
description = "Embedding generation and other ML capabilities for Oort app"
authors = ["nicolas-ricc <nicolas.riccomini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.47.1"
scikit-learn = "^1.6.0"
kaggle = "^1.6.17"
spacy = "^3.8.3"
ftfy = "^6.3.1"
nltk = "^3.9.1"
torch = "^2.5.1"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
ollama = "^0.4.7"
python-multipart = "^0.0.6"
numpy = "^2.2.4"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
